test/parser/rte/025.hac
// "rte/025b.hac" -- expect fail, perhaps at create-time
// based on "rte/024b.hac"
defproc foo() {
bool x, y;
x @[atomic];
x = y;		// error: invalid alias
}

foo bar;
